--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
+    "@syncfusion/ej2-react-calendars": "^20.1.52",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "react-tinder-card": "^1.4.5",
