--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
     "@syncfusion/ej2-react-calendars": "^20.1.52",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
@@ -42,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0"
   }
 }
