--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
+    "react-mount": "^0.1.3",
     "react-scripts": "5.0.0",
     "react-tinder-card": "^1.4.5",
     "styled-components": "^5.3.5",
@@ -22,10 +23,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/App.js",
+      "!src/components/BottomBtn.js"
     ]
   },
   "browserslist": {
@@ -43,7 +46,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.2.0",
-    "react-shallow-renderer": "^16.15.0"
+    "@testing-library/user-event": "^14.0.0",
+    "msw": "^0.41.0",
+    "react-shallow-renderer": "^16.15.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
