--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/material": "^5.6.0",
     "@syncfusion/ej2-react-calendars": "^20.1.52",
     "moment": "^2.29.3",
+    "nanoid": "^3.3.4",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-mount": "^0.1.3",
     "react-scripts": "5.0.0",
+    "react-test-utils": "^0.0.1",
     "react-tinder-card": "^1.4.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -44,11 +48,32 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-essentials": "^6.5.5",
+    "@storybook/addon-interactions": "^6.5.5",
+    "@storybook/addon-links": "^6.5.5",
+    "@storybook/builder-webpack5": "^6.5.5",
+    "@storybook/manager-webpack5": "^6.5.5",
+    "@storybook/node-logger": "^6.5.5",
+    "@storybook/preset-create-react-app": "^4.1.1",
+    "@storybook/react": "^6.5.5",
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.0.0",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "msw": "^0.41.0",
-    "react-shallow-renderer": "^16.15.0",
+    "prop-types": "^15.8.1",
+    "webpack": "^5.72.1",
     "whatwg-fetch": "^3.6.2"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amannn13rawat/admin_UI.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
