--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.0",
     "@syncfusion/ej2-react-calendars": "^20.1.52",
+    "jsdoc": "^3.6.10",
     "moment": "^2.29.3",
     "nanoid": "^3.3.4",
     "react": "^18.0.0",
@@ -25,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "jest": {
     "collectCoverageFrom": [
